// *****************************************************
//    Copyright 2022 Videonetics Technology Pvt Ltd
// *****************************************************
#pragma once
#ifndef status_service_client_h
#define status_service_client_h
class StatusServiceClient
{
private:
  /* data */
public:
  StatusServiceClient(/* args */);
  ~StatusServiceClient();
};
#endif // status_service_client_h
